src/test/ui/self/elision/ref-mut-self-async.base.stderr
error[E0623]: lifetime mismatch
  --> $DIR/ref-mut-self-async.rs:16:9
   |
LL |     async fn ref_self(&mut self, f: &u32) -> &u32 {
   |                                     ----     ----
   |                                     |
   |                                     this parameter and the return type are declared with different lifetimes...
LL |         f
   |         ^ ...but data from `f` is returned here
   |
   = note: each elided lifetime in input position becomes a distinct lifetime
help: consider introducing a named lifetime parameter and update trait if needed
   |
LL |     async fn ref_self<'a>(&'a mut self, f: &'a u32) -> &u32 {
   |                      ++++  ++               ++

error[E0623]: lifetime mismatch
  --> $DIR/ref-mut-self-async.rs:24:9
   |
LL |     async fn ref_Self(self: &mut Self, f: &u32) -> &u32 {
   |                                           ----     ----
   |                                           |
   |                                           this parameter and the return type are declared with different lifetimes...
LL |         f
   |         ^ ...but data from `f` is returned here
   |
   = note: each elided lifetime in input position becomes a distinct lifetime
help: consider introducing a named lifetime parameter and update trait if needed
   |
LL |     async fn ref_Self<'a>(self: &'a mut Self, f: &'a u32) -> &u32 {
   |                      ++++        ++               ++

error[E0623]: lifetime mismatch
  --> $DIR/ref-mut-self-async.rs:30:9
   |
LL |     async fn box_ref_Self(self: Box<&mut Self>, f: &u32) -> &u32 {
   |                                                    ----     ----
   |                                                    |
   |                                                    this parameter and the return type are declared with different lifetimes...
LL |         f
   |         ^ ...but data from `f` is returned here
   |
   = note: each elided lifetime in input position becomes a distinct lifetime
help: consider introducing a named lifetime parameter and update trait if needed
   |
LL |     async fn box_ref_Self<'a>(self: Box<&'a mut Self>, f: &'a u32) -> &u32 {
   |                          ++++            ++                ++

error[E0623]: lifetime mismatch
  --> $DIR/ref-mut-self-async.rs:36:9
   |
LL |     async fn pin_ref_Self(self: Pin<&mut Self>, f: &u32) -> &u32 {
   |                                                    ----     ----
   |                                                    |
   |                                                    this parameter and the return type are declared with different lifetimes...
LL |         f
   |         ^ ...but data from `f` is returned here
   |
   = note: each elided lifetime in input position becomes a distinct lifetime
help: consider introducing a named lifetime parameter and update trait if needed
   |
LL |     async fn pin_ref_Self<'a>(self: Pin<&'a mut Self>, f: &'a u32) -> &u32 {
   |                          ++++            ++                ++

error[E0623]: lifetime mismatch
  --> $DIR/ref-mut-self-async.rs:42:9
   |
LL |     async fn box_box_ref_Self(self: Box<Box<&mut Self>>, f: &u32) -> &u32 {
   |                                                             ----     ----
   |                                                             |
   |                                                             this parameter and the return type are declared with different lifetimes...
LL |         f
   |         ^ ...but data from `f` is returned here
   |
   = note: each elided lifetime in input position becomes a distinct lifetime
help: consider introducing a named lifetime parameter and update trait if needed
   |
LL |     async fn box_box_ref_Self<'a>(self: Box<Box<&'a mut Self>>, f: &'a u32) -> &u32 {
   |                              ++++                ++                 ++

error[E0623]: lifetime mismatch
  --> $DIR/ref-mut-self-async.rs:48:9
   |
LL |     async fn box_pin_ref_Self(self: Box<Pin<&mut Self>>, f: &u32) -> &u32 {
   |                                                             ----     ----
   |                                                             |
   |                                                             this parameter and the return type are declared with different lifetimes...
LL |         f
   |         ^ ...but data from `f` is returned here
   |
   = note: each elided lifetime in input position becomes a distinct lifetime
help: consider introducing a named lifetime parameter and update trait if needed
   |
LL |     async fn box_pin_ref_Self<'a>(self: Box<Pin<&'a mut Self>>, f: &'a u32) -> &u32 {
   |                              ++++                ++                 ++

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0623`.
